--- a/gb/20/8/31/n12368977.md
+++ b/gb/20/8/31/n12368977.md
@@ -1,17 +1,17 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/twfknp314/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/twfknp314/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/twfknp314/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/twfknp314/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/twfknp314/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/twfknp314/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/twfknp314/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/twfknp314/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/twfknp314/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/twfknp314/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/twfknp314/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/twfknp314/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/twfknp314/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/twfknp314/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/twfknp314/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/twfknp314/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/twfknp314/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/twfknp314/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/twfknp314/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/twfknp314/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/twfknp314/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/twfknp314/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/twfknp314/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/twfknp314/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/twfknp314/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/twfknp314/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/twfknp314/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/twfknp314/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/twfknp314/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/twfknp314/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/twfknp314/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/twfknp314/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/twfknp314/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/twfknp314/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/twfknp314/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/twfknp314/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/twfknp314/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/twfknp314/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/twfknp314/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/twfknp314/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/twfknp314/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/twfknp314/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/twfknp314/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/twfknp314/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/twfknp314/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/twfknp314/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/twfknp314/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hoxgwd311/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>欧洲华人聚集德国慕尼黑 揭中共恶魔真面目</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/08/IMG_5943-600x400.jpg" />
 <h6>2020年8月29日，在德国慕尼黑的奥迪安广场（Odeonsplatz），来自德国、法国、意大利、奥地利、英国、希腊、丹麦、匈牙利和捷克等欧洲各国华人集会，高喊“打倒中共”。（黄芩／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2020年08月31日讯】（大纪元记者黄芩德国采访慕尼黑报导）“每个中国人事实上都被中共迫害过。”来自法国的一位化名“小皮匠”的华人女士对大纪元记者表示，来慕尼黑就是要把关于<ahref="https://github.com/twfknp314/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>、中共迫害香港民众的真相告诉欧洲民众，“民众要觉醒，要让人知道地球上还有（中共）这么一个恶魔存在，一个撒旦的代表。”</p>
-<figure id="attachment_12369051" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/08/IMG_5935.jpg"><img class="size-large wp-image-12369051" src="https://i.epochtimes.com/assets/uploads/2020/08/IMG_5935-600x423.jpg" alt="" width="600" b="423" /></a><figcaption class="wp-caption-text">2020年8月29日，在德国慕尼黑的奥迪安广场（Odeonsplatz），来自欧洲多的华人集会，向民众展示<ahref="https://github.com/twfknp314/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>（武汉肺炎）的真相展板。（黄芩／大纪元）</figcaption></figure>
-<p>2020年8月29日，在德国慕尼黑的奥迪安广场（Odeonsplatz），来自德国、法国、意大利、奥地利、英国、希腊、丹麦、匈牙利和捷克等欧洲各国的华人冒着雨，手举<ahref="https://github.com/twfknp314/djy/blob/master/gb/tag/%E6%96%B0%E4%B8%AD%E5%9B%BD%E8%81%94%E9%82%A6.md#1">新中国联邦</a>旗子，高喊“<ahref="https://github.com/twfknp314/djy/blob/master/gb/tag/%E6%89%93%E5%80%92%E4%B8%AD%E5%85%B1.md#1">打倒中共</a>”、“<ahref="https://github.com/twfknp314/djy/blob/master/gb/tag/%E9%A6%99%E6%B8%AF%E8%87%AA%E7%94%B1.md#1">香港自由</a>”、“我们需要真相”等口号，同时打出“中共不等于中国”、“制止中共 制止病毒”、“中共撒谎 人民死亡”、“<ahref="https://github.com/twfknp314/djy/blob/master/gb/tag/%E4%B8%8E%E9%A6%99%E6%B8%AF%E5%90%8C%E5%9C%A8.md#1">与香港同在</a>”、“停止中共病毒 我们需要啤酒节”等横幅，同时摆放了大量关于中共病毒（武汉肺炎）的真相展板，揭露中共掩盖病毒、危害全球的真相。</p>
-<figure id="attachment_12369057" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/08/IMG_5939.jpg"><img class="size-large wp-image-12369057" src="https://i.epochtimes.com/assets/uploads/2020/08/IMG_5939-600x418.jpg" alt="" width="600" b="418" /></a><figcaption class="wp-caption-text">2020年8月29日，在德国慕尼黑的奥迪安广场（Odeonsplatz），来自欧洲多国的华人集会，打出“制止中共 制止病毒”的横幅。（黄芩／大纪元）</figcaption></figure>
+	<p>【大纪元2020年08月31日讯】（大纪元记者黄芩<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%BE%B7%E5%9B%BD.md#1">德国</a>慕尼黑采访报导）“每个中国人事实上都被中共迫害过。”来自法国的一位化名“小皮匠”的<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%8D%8E%E4%BA%BA.md#1">华人</a>女士对大纪元记者表示，来慕尼黑就是要把关于<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>、中共迫害香港民众的真相告诉欧洲民众，“民众要觉醒，要让人知道地球上还有（中共）这么一个恶魔存在，一个撒旦的代表。”</p>
+<figure id="attachment_12369051" aria-describedby="caption-attachment-12369051" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/08/IMG_5935.jpg"><img class="size-large wp-image-12369051" src="https://i.epochtimes.com/assets/uploads/2020/08/IMG_5935-600x423.jpg" alt="" width="600" b="423" /></a><figcaption id="caption-attachment-12369051" class="wp-caption-text">2020年8月29日，在<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%BE%B7%E5%9B%BD.md#1">德国</a>慕尼黑的奥迪安广场（Odeonsplatz），来自欧洲多的<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%8D%8E%E4%BA%BA.md#1">华人</a>集会，向民众展示<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>（武汉肺炎）的真相展板。（黄芩／大纪元）</figcaption></figure>
+<p>2020年8月29日，在德国慕尼黑的奥迪安广场（Odeonsplatz），来自德国、法国、意大利、奥地利、英国、希腊、丹麦、匈牙利和捷克等欧洲各国的华人冒着雨，手举<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%96%B0%E4%B8%AD%E5%9B%BD%E8%81%94%E9%82%A6.md#1">新中国联邦</a>旗子，高喊“打倒中共”、“<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E9%A6%99%E6%B8%AF%E8%87%AA%E7%94%B1.md#1">香港自由</a>”、“我们需要真相”等口号，同时打出“中共不等于中国”、“制止中共 制止病毒”、“中共撒谎 人民死亡”、“与香港同在”、“停止中共病毒 我们需要啤酒节”等横幅，同时摆放了大量关于中共病毒（武汉肺炎）的真相展板，揭露中共掩盖病毒、危害全球的真相。</p>
+<figure id="attachment_12369057" aria-describedby="caption-attachment-12369057" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/08/IMG_5939.jpg"><img class="size-large wp-image-12369057" src="https://i.epochtimes.com/assets/uploads/2020/08/IMG_5939-600x418.jpg" alt="" width="600" b="418" /></a><figcaption id="caption-attachment-12369057" class="wp-caption-text">2020年8月29日，在德国慕尼黑的奥迪安广场（Odeonsplatz），来自欧洲多国的华人集会，打出“制止中共 制止病毒”的横幅。（黄芩／大纪元）</figcaption></figure>
 <h2>要告诉欧洲人 地球上有中共恶魔存在</h2>
-<p>此次活动由<ahref="https://github.com/twfknp314/djy/blob/master/gb/tag/%E6%96%B0%E4%B8%AD%E5%9B%BD%E8%81%94%E9%82%A6.md#1">新中国联邦</a>的喜马拉雅农场举办，“小皮匠”女士告诉记者，光从法国就开了一辆大巴过来。她说这次活动主要有三个目的。</p>
+<p>此次活动由<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%96%B0%E4%B8%AD%E5%9B%BD%E8%81%94%E9%82%A6.md#1">新中国联邦</a>的喜马拉雅农场举办，“小皮匠”女士告诉记者，光从法国就开了一辆大巴过来。她说这次活动主要有三个目的。</p>
 <p>“首先，今天我们要告知欧洲民众，（中共）病毒的真相是什么。病毒就是来源于武汉中共实验室，并且是中共军方直接制造出来，目的是要搞弱西方各国的力量，好让它们（中共）有机会统治世界。”小皮匠表示就是这个核心目的，我们要把这些真相告诉欧洲民众，民众要觉醒，“让人知道地球上还有（中共）这么一个恶魔的存在，一个撒旦的代表。”</p>
 <p>“第二，在香港发生了惨无人道的屠杀，到目前为止已有一万多香港人失踪，我们再也找不到他们了。”小皮匠说，“怎么21世纪的人类社会中还能出现这样的事情。”她表示我们要声援香港人民，“也要让欧洲人知道中共这个恶魔在香港肆虐。”</p>
 <p>“还有下一步中共各种各样的计划，通过一带一路已经渗透到了非洲、东南亚、中东、意大利、希腊，他们还有下一步的计划。”她说，“他们用蓝金黄甚至侵蚀到白宫的内部。如果说我们要是再不觉醒，每天风花雪月，就像清水煮青蛙，你感觉不到水热呢，就被煮死了。”</p>
@@ -19,7 +19,7 @@
 <p>负责联系的德国成员小明对大纪元记者表示，“这是咱们华人团结在一起，聚集在一起，共同反抗共产党暴政，消除这颗毒瘤的最好机会。”他说，“因为我们华人过去的几十年里一直被共产党奴役，一直被打得一盘散沙，今天我们能团结在一起，聚集在慕尼黑，这是一个展示我们力量的非常好的机会。”</p>
 <p>小明谈到过去在国内接触不到外边真实的社会，“在国内我们得到的信息都是洗脑文章，会给你很多误导。”他说，“这些误导不一定全是假的，但一定是给你灌输一些共产党希望你知道的东西，而不是真相。比如说关于香港的事情，在国外我们知道共产党通过非常暴力的手段镇压了香港的和平抗议，但在国内，把香港人人描述成为暴徒，把和平的抗议污蔑成暴力行为，这是我们作为正义的华人所无法忍受的。”</p>
 <h2>不看清中共面目 每个人都可能死无葬身之地</h2>
-<p>小明并受“德国<ahref="https://github.com/twfknp314/djy/blob/master/gb/tag/%E4%B8%8E%E9%A6%99%E6%B8%AF%E5%90%8C%E5%9C%A8.md#1">与香港同在</a>”组织（Germany stand with Hong Kong）的委托，代表“法兰克福与香港同在”（Frankfurt stand with Hong Kong）团体接受采访。</p>
+<p>小明并受“德国与香港同在”组织（Germany stand with Hong Kong）的委托，代表“法兰克福与香港同在”（Frankfurt stand with Hong Kong）团体接受采访。</p>
 <p>“我不是香港人，但我非常喜爱香港人，他们是我见过的世界上最文明、最有礼貌，素质非常高的一个群体。”小明说，“我们看到这样一个美好的群体被共产党不断打压，不断强暴，通过凌辱、非人待遇残害这些香港同胞，这让我非常气愤。”</p>
 <p>“我希望能借着这个机会，让欧洲民众能够了解中共在香港犯下的滔天罪行，让他们知道中共有多么的邪恶。”小明强调，“这一切都与每个人息息相关，因为今天它迫害香港人，明天它可能摧毁全世界的自由，可能会危害全世界的秩序，我希望能够把真相带给西方，希望能够挽回作为华人、作为香港人的尊严。”</p>
 <p>“现在（中共）病毒不光荼毒中国人，荼毒香港人，它在伤害全世界。”小明说，“我们可以看到西方经济已经萧条成什么样子了，这么多人死亡，多少家庭支离破碎。这一切都是中共造成的，我们希望西方人能够了解这一点。”</p>
@@ -51,42 +51,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/twfknp314/djy/blob/master/gb/20/7/19/n12267507.md#1">“打倒中共” 伊朗人在法兰克福中领馆抗议</a></li>
-<li><a href="https://github.com/twfknp314/djy/blob/master/gb/20/7/27/n12288078.md#1">近200加国华人中领馆前抗议 高喊打倒中共</a></li>
-<li><a href="https://github.com/twfknp314/djy/blob/master/gb/20/7/30/n12296278.md#1">新中国联邦全球抗议集会 澳洲站启幕</a></li>
-<li><a href="https://github.com/twfknp314/djy/blob/master/gb/20/8/18/n12338735.md#1">近百华人洛杉矶中领馆抗议 吁加入灭共行列</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/7/19/n12267507.md#1">“打倒中共” 伊朗人在法兰克福中领馆抗议</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/7/27/n12288078.md#1">近200加国华人中领馆前抗议 高喊打倒中共</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/7/30/n12296278.md#1">新中国联邦全球抗议集会 澳洲站启幕</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/8/18/n12338735.md#1">近百华人洛杉矶中领馆抗议 吁加入灭共行列</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/21/n11270152.md#1" target="_blank">中共暴政录：支持苏俄入侵中国的中东路事件</a></li><li><a href="https://github.com/twfknp314/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/7/20/n9444375.md#1" target="_blank">《观察家》：法轮功修炼者的非凡勇气和坚韧</a></li>
+<li><a href="https://github.com/ychojm359/ntdtv/blob/master/gb/2020/04/16/a102824026.md#1" target="_blank">前凤凰网记者：中共迫害法轮功是最大的作恶/a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/2/17/n11874645.md#1" target="_blank">王友群：习近平的父亲被栽赃陷害16年</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/31/n11490640.md#1" target="_blank">来自摩尔多瓦的心声：道德是人类真正价值</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/zxivak3555/djy/blob/master/gb/20/8/23/n12352151.md#1">清朝官场惊魂奇闻 原是前世埋下祸根</a></li>
-<li><a href="https://github.com/zxivak3555/djy/blob/master/gb/20/8/24/n12353266.md#1">疫情中返台居家隔离日记（上）</a></li>
-<li><a href="https://github.com/zxivak3555/djy/blob/master/gb/20/8/28/n12363346.md#1">拯救垂死的鱼 一群猪因善行成为网红</a></li>
-<li><a href="https://github.com/zxivak3555/djy/blob/master/gb/20/8/24/n12353478.md#1">以色列培育红母牛 为《圣经》末日预言准备</a></li>
-<li><a href="https://github.com/zxivak3555/djy/blob/master/gb/20/8/29/n12366370.md#1">【薇羽看世间】FBI解密：来自金星的科学家</a></li>
-<li><a href="https://github.com/zxivak3555/djy/blob/master/gb/20/8/29/n12366125.md#1">【新闻第一现场】王毅PS照火爆 安倍继任者？</a></li>
-<li><a href="https://github.com/zxivak3555/djy/blob/master/gb/20/8/28/n12365218.md#1">3秒止痛！头痛有5大原因 中医妙招速救</a></li>
-<li><a href="https://github.com/zxivak3555/djy/blob/master/gb/20/8/29/n12366756.md#1">【新闻看点】川普支持率飙升 拜登不敢辩论？</a></li>
-<li><a href="https://github.com/zxivak3555/djy/blob/master/gb/20/8/28/n12364079.md#1">【珍言真语】蔡咏梅：大佛洗脚天下乱 末代征兆</a></li>
-<li><a href="https://github.com/zxivak3555/djy/blob/master/gb/20/8/29/n12365460.md#1">偷美研究机密逃回国 中共军方学者机场被抓</a></li>
-<li><a href="https://github.com/zxivak3555/djy/blob/master/gb/20/8/29/n12365540.md#1">川普支持率飙升 加州人赞共和党大会</a></li>
-<li><a href="https://github.com/zxivak3555/djy/blob/master/gb/20/8/28/n12365016.md#1">成龙北京豪宅被拍卖 入住13年突遭查封</a></li>
-<li><a href="https://github.com/zxivak3555/djy/blob/master/gb/20/8/27/n12362661.md#1">福布斯中国名人榜出炉 美籍刘亦菲入选遭质疑</a></li>
-<li><a href="https://github.com/zxivak3555/djy/blob/master/gb/20/8/28/n12365345.md#1">台湾馆长遭枪击 杜汶泽看直播喊话：要撑住</a></li>
-<li><a href="https://github.com/zxivak3555/djy/blob/master/gb/20/8/29/n12365632.md#1">“黑豹”主角惊传癌逝 享年43岁</a></li>
-<li><a href="https://github.com/zxivak3555/djy/blob/master/gb/20/8/28/n12363595.md#1">依希腊黄金比例评估 这名男星是世界第一帅</a></li>
-<li><a href="https://github.com/zxivak3555/djy/blob/master/gb/20/8/26/n12357679.md#1">自制6种“天然清洁剂” 难缠污垢一次搞定</a></li>
-<li><a href="https://github.com/zxivak3555/djy/blob/master/gb/20/8/28/n12363545.md#1">不用咖啡机 在家也能冲泡好喝的拿铁咖啡</a></li>
-<li><a href="https://github.com/zxivak3555/djy/blob/master/gb/20/8/28/n12363346.md#1">拯救垂死的鱼 一群猪因善行成为网红</a></li>
-<li><a href="https://github.com/zxivak3555/djy/blob/master/gb/20/8/28/n12363839.md#1">在台湾待一段时间 大陆网红赞高自由度</a></li>
-<li><a href="https://github.com/zxivak3555/djy/blob/master/gb/20/8/25/n12357051.md#1">【罗厨寻味】番茄炒牛肉</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/4/20/n13716382.md#1">【百年真相】打抱不平的侠女 为何被枪杀取肾？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/4/n13726629.md#1">【命相漫谈】怎么说“财多如何不发财？”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741091.md#1">【秦鹏直播】要官员剥离海外资产 习意欲何为？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741104.md#1">【横河观点】拜登东亚行 美50参议员挺台湾</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741045.md#1">【神韵早期节目】唐玄宗游月宫（2013年制作）</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740226.md#1">紧跟中共的大V遭封杀 对五毛粉红造成冲击</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739710.md#1">大陆两卫健委官员批清零政策  被指不寻常</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740103.md#1">传广西销毁捧习“口袋书” 相关报导已全删</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739984.md#1">介绍田中老家 任贤齐吃喝不花钱 自嘲像恶霸</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740144.md#1">被问会否与周润发再合作 钟楚红：一定不拒绝</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739444.md#1">陈晓旭去世15周年 薛宝钗扮演者张莉贴照缅怀</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739808.md#1">搭飞机如何穿衣服比较好？ 空服员分享经验</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/11/n13733128.md#1">睡醒有眼屎不是坏事！但眼屎过多小心3大警讯</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738702.md#1">【健康1+1】新冠、疫苗刺突蛋白 2大方法解毒</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/twfknp314/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/twfknp314/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/31/n12368977.htm">欧洲华人聚集德国慕尼黑 揭中共恶魔真面目</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/31/n12368977.htm">欧洲华人聚集德国慕尼黑 揭中共恶魔真面目</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://www.szzd.org/v.php?action=qrcode&url=https://github.com/twfknp314/djy/blob/master/gb/20/8/31/n12368977.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/twfknp314/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twfknp314/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/twfknp314/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/twfknp314/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/twfknp314/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twfknp314/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/twfknp314/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twfknp314/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/twfknp314/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twfknp314/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/twfknp314/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twfknp314/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/twfknp314/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twfknp314/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/twfknp314/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twfknp314/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/twfknp314/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twfknp314/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/twfknp314/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twfknp314/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/twfknp314/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twfknp314/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/twfknp314/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twfknp314/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/twfknp314/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twfknp314/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/twfknp314/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twfknp314/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/twfknp314/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twfknp314/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/twfknp314/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twfknp314/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/twfknp314/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twfknp314/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/twfknp314/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twfknp314/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/twfknp314/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twfknp314/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/twfknp314/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twfknp314/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/twfknp314/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twfknp314/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/twfknp314/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twfknp314/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/twfknp314/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twfknp314/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/twfknp314/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twfknp314/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hoxgwd311/djy/blob/master/gb/20/8/31/n12368977.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
